# the-mini-universe

./: .env.cmake  CMakeLists.txt  README.md  debug.bat  release.bat
src/: RandNumGenerator.hpp  StarSystem.hpp  main.cpp  pch.h
