include(./.env.cmake OPTIONAL RESULT_VARIABLE LOCAL_ENV)
message(STATUS "Local .env.cmake: ${LOCAL_ENV}")

cmake_minimum_required(VERSION 3.10)

set(CMAKE_C_COMPILER ${MINGW64_PATH}gcc.exe)
set(CMAKE_CXX_COMPILER ${MINGW64_PATH}g++.exe)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(MyProject VERSION 1.0)

file(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/src/*.cpp)
add_executable(${PROJECT_NAME} ${SOURCES})

target_include_directories(${PROJECT_NAME} PUBLIC ${SFML_PATH}/include)
target_link_directories(${PROJECT_NAME} PUBLIC ${SFML_PATH}/lib)

target_precompile_headers(${PROJECT_NAME} PUBLIC ${SRC_DIR}pch.h)
target_link_libraries(MyProject sfml-system sfml-window sfml-graphics)

